Few extra folders

--- a/To-do_API.api/To-do_API.api.csproj
+++ b/To-do_API.api/To-do_API.api.csproj
@@ -11,4 +11,11 @@
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="9.0.11" />
   </ItemGroup>
 
+  <ItemGroup>
+    <Folder Include="Application\" />
+    <Folder Include="Application\DTOs\" />
+    <Folder Include="Domain\" />
+    <Folder Include="Infrastructure\" />
+  </ItemGroup>
+
 </Project>
