manualy updating models

--- a/To-do_API.api/To-do_API.api.csproj
+++ b/To-do_API.api/To-do_API.api.csproj
@@ -8,6 +8,10 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <None Include="Models\TodoResponse.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.7.0" />
   </ItemGroup>
 
